@@ -1,3 +1,7 @@
+2010-02-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Fixed bugs:
+	  #2958487 HQx3 is only scaled to 2x when set in Exult menu
+
 2010-02-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Fixed bugs:
 	  #2179006 Sleeping on the Floor (BG/SI)
